--- a/readme
+++ b/readme
@@ -1,1 +1,11 @@
-Learning LangChain
+# Langchain tutorials
+
+Overview and tutorial of the LangChain Library
+
+### Getting Started
+
+Follow [Interns School](https://twitter.com/InternsSchool) on twitter for updates
+
+### Also check
+
+[Langchain Course](https://github.com/shahzaibkhan/learning-langchain)
