--- a/Learning_LangChain_03.ipynb
+++ b/Learning_LangChain_03.ipynb
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Learning Indeex by Developing your own Chatgpt**\n",
+        "# **Learning Index by Developing your own Chatgpt**\n",
         "The goal of this lesson is to let you create a chatbot trained on your data using ChatGPT.\n",
         "\n",
         "Other use cases which may use similar concept include:\n",
